[#45][front] fix logo svg not visible

--- a/front/app/src/assets/scss/_bootstrap-core.scss
+++ b/front/app/src/assets/scss/_bootstrap-core.scss
@@ -57,6 +57,13 @@ $utilities: map-merge(
           responsive: true,
         )
       ),
+    'z-index':
+      map-merge(
+        map-get($utilities, 'z-index'),
+        (
+          responsive: true,
+        )
+      ),
   )
 );
 
